update swagger & route for patch project name
